Allow for file.encoding=UTF-8 and UTF8
git-svn-id: https://svn.apache.org/repos/asf/jakarta/jmeter/branches/rel-2-2@555350 13f79535-47bb-0310-9956-ffa450edef68

Former-commit-id: aed4094e18a8f6b7845e05168480768dc7af100d